# VoxDei

./: .gitignore  ARCHITECTURE.md  README.md  nx.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
backend/annotation-service/src/: main.py
backend/chat-history-service/: Dockerfile  README.md  project.json  pyproject.toml
backend/chat-history-service/src/chat-history-service/: config.py  init_db.py  main.py  models.py  test_init_db.py
backend/chat-history-service/src/chat-history-service/routers/: chats.py
backend/monolith/src/: chat_hf.py  convos.py  main.py
backend/monolith/src/dependencies/: shared_state.py
docs/: ARCHITECTURE.d2  data-dictionary.md
frontend/annotation/: README.md  index.html  package.json  tsconfig.json
frontend/annotation/src/: App.tsx  index.css  main.tsx
frontend/annotation/src/components/: Message.tsx
frontend/annotation/src/hooks/: useConvo.ts  useConvoPage.ts
frontend/chat-ui/: Dockerfile  README.md  package.json  tailwind.config.js
frontend/chat-ui/app/: layout.tsx  page.tsx
frontend/chat-ui/components/: index.ts
frontend/chat-ui/hooks/: useAutosizeTextArea.ts
frontend/chat-ui/lib/: client_requests.ts  tw-brand-preset.js
infra/: run_mistral.sh
infra/llama_cpp/: README.md  openhermes.service
infra/meta/: README.md  docker-compose.yml
infra/tgi/: run_embedding_server.sh  run_mistral.sh
schemas/: README.md  project.json  pyproject.toml
schemas/json/: Convo.json
schemas/schemas/: __init__.py  convo.py  message.py
schemas/tests/: test_hello.py
(+15 files in other folders)
